--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#0b0c10">
 
+  <!-- Font: Space Grotesk -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600;700&display=swap" rel="stylesheet">
+
   <style>
     :root{
       /* Background + neon accents */
@@ -39,12 +44,12 @@
       --energy-yellow:#FDE68A;/* light yellow */
       --energy-green:#86EFAC;/* light green */
 
-      --radius:10px;         /* moderate rounding */
+      --radius:10px;
       --pad:16px;
     }
 
     *{box-sizing:border-box}
-    html,body{margin:0;height:100%;font-family:Inter,ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial}
+    html,body{margin:0;height:100%;font-family:"Space Grotesk",Inter,ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial}
     body{color:var(--fg); background: radial-gradient(1200px 600px at 50% -10%, rgba(0,229,255,.12), transparent 60%), radial-gradient(900px 500px at 120% 10%, rgba(255,43,214,.10), transparent 60%), var(--bg);}    
 
     /* Neon grid overlay */
@@ -54,45 +59,49 @@
       mask: linear-gradient(to bottom, transparent 0, rgba(0,0,0,.6) 10%, rgba(0,0,0,.9) 60%, rgba(0,0,0,.6) 100%);
     }
 
-    /* Safe-area aware wrapper */
-    .wrap{min-height:100dvh;display:grid;grid-template-rows:auto 1fr auto}
+    /* Layout */
+    .wrap{min-height:100dvh;display:grid;grid-template-rows:1fr auto}
 
-    header{
-      position:sticky;top:0;z-index:20;
+    header{position:sticky;top:0;z-index:20;
       background:linear-gradient(180deg, rgba(0,0,0,.55), rgba(0,0,0,.25));
       -webkit-backdrop-filter: blur(10px) saturate(140%);
       backdrop-filter: blur(10px) saturate(140%);
-      padding:calc(env(safe-area-inset-top) + 10px) var(--pad) 10px var(--pad);
+      padding:calc(env(safe-area-inset-top) + 8px) var(--pad) 8px var(--pad);
       border-bottom:1px solid var(--glass-stroke);
     }
-    .brand{display:flex;align-items:center;gap:10px}
-    .logo{width:22px;height:22px;border-radius:6px;background:conic-gradient(from 0deg, var(--neon-cyan), var(--neon-magenta), var(--neon-violet), var(--neon-cyan)); filter:brightness(1.1); box-shadow:0 0 24px rgba(0,229,255,.25)}
-    h1{font-size:18px;margin:0;font-weight:700;letter-spacing:.3px}
 
-    /* Panels */
-    .panel{position:relative;margin:12px;border-radius:var(--radius);padding:18px;background:var(--glass);border:1px solid var(--glass-stroke);
+    /* Bottom nav */
+    .bottombar{position:sticky;bottom:0;z-index:20;display:flex;align-items:center;justify-content:space-between;gap:10px;
+      padding:8px var(--pad) calc(env(safe-area-inset-bottom) + 10px) var(--pad);
+      background:linear-gradient(180deg, rgba(0,0,0,.25), rgba(0,0,0,.6));
+      -webkit-backdrop-filter: blur(10px) saturate(140%);backdrop-filter: blur(10px) saturate(140%);
+      border-top:1px solid var(--glass-stroke);
+    }
+    .bottombar .left{display:flex;gap:8px}
+    .bottombar .right{display:flex;gap:8px}
+    .btab{appearance:none;border:1px solid var(--glass-stroke);background:rgba(255,255,255,.04);color:var(--fg);padding:10px 14px;border-radius:12px;cursor:pointer}
+    .btab.active{background:linear-gradient(135deg, rgba(0,229,255,.28), rgba(255,43,214,.28));border-color:transparent;color:#0b0c10;font-weight:800;box-shadow:0 0 18px rgba(0,229,255,.2)}
+    .bghost{appearance:none;border:1px solid var(--glass-stroke);background:transparent;color:var(--fg);padding:10px 12px;border-radius:10px;cursor:pointer}
+    .bdanger{appearance:none;border:0;background:linear-gradient(135deg, rgba(239,68,68,.9), rgba(239,68,68,.7));color:#fff;padding:10px 12px;border-radius:10px;cursor:pointer}
+
+    /* Screens */
+    main{position:relative;min-height:0}
+    .screen{position:absolute;inset:0;overflow:auto;padding:14px}
+    .screen.hidden{display:none}
+
+    /* Glass panel feel, but full-bleed */
+    .panel{position:relative;border-radius:var(--radius);padding:18px;background:var(--glass);border:1px solid var(--glass-stroke);
       -webkit-backdrop-filter: blur(12px) saturate(160%);backdrop-filter: blur(12px) saturate(160%);
       box-shadow:0 20px 50px rgba(0,0,0,.45), 0 0 0 1px rgba(255,255,255,.02) inset;
     }
-    .panel::after{content:"";position:absolute;inset:0;border-radius:inherit;pointer-events:none;box-shadow:0 0 60px rgba(0,229,255,.06), 0 0 60px rgba(255,43,214,.06)}
-    .panel h2{margin:0 0 10px;font-size:15px;font-weight:600;letter-spacing:.2px}
+    .panel h2{margin:0 0 10px;font-size:15px;font-weight:700;letter-spacing:.2px}
 
-    /* Buttons */
-    button{appearance:none;border:1px solid var(--glass-stroke);border-radius:8px;padding:10px 12px;cursor:pointer;color:var(--fg);background:rgba(255,255,255,.04)}
-    button:hover{filter:brightness(1.08)}
-    .primary{background:linear-gradient(135deg, rgba(0,229,255,.28), rgba(255,43,214,.28)); border-color:transparent; color:#0b0c10; font-weight:800}
-    .ghost{background:transparent}
-    .danger{background:linear-gradient(135deg, rgba(239,68,68,.9), rgba(239,68,68,.7));border-color:transparent;color:#fff}
-
-    .row{display:flex;gap:10px;align-items:center}
-    .between{justify-content:space-between}
-
-    /* Mood/Energy Chips */
+    /* Chips */
     .chip-row{display:flex;gap:8px;flex-wrap:wrap}
-    .chip{border:1px solid var(--glass-stroke);padding:8px 10px;border-radius:8px;cursor:pointer;background:rgba(255,255,255,.04)}
+    .chip{border:1px solid var(--glass-stroke);padding:8px 10px;border-radius:10px;cursor:pointer;background:rgba(255,255,255,.04)}
     .chip.active{outline:2px solid var(--neon-cyan);outline-offset:0; box-shadow:0 0 18px rgba(0,229,255,.25)}
 
-    /* 7-day history (glass squares + neon inner bar) */
+    /* 7-day history */
     .history{display:grid;grid-template-columns:repeat(7,1fr);gap:8px;margin-top:12px}
     .dot{height:16px;border-radius:6px;background:#242733;position:relative;overflow:hidden;border:1px solid var(--glass-stroke)}
     .dot .inner{position:absolute;left:50%;transform:translateX(-50%);bottom:1px;width:5px;border-radius:4px;box-shadow:0 0 10px rgba(255,255,255,.2)}
@@ -115,90 +124,83 @@
     .spinning #spinBtn{pointer-events:none;opacity:.7}
     @keyframes spin{from{transform:rotate(0)}to{transform:rotate(360deg)}}
 
-    footer{color:var(--muted);font-size:12px;border-top:1px solid var(--glass-stroke);
-      background:linear-gradient(180deg, rgba(0,0,0,.2), rgba(0,0,0,.5));
-      -webkit-backdrop-filter: blur(10px) saturate(140%);backdrop-filter: blur(10px) saturate(140%);
-      padding:8px var(--pad) calc(env(safe-area-inset-bottom) + 10px);
-    }
-
     /* Summary section */
     #summaryWrap{display:none;margin-top:10px}
     #summaryWrap.open{display:block}
-    #summaryCanvas{width:100%;height:110px;display:block}
+    #summaryCanvas{width:100%;height:120px;display:block}
 
-    /* Reduce motion respect */
-    @media (prefers-reduced-motion: reduce){
-      .spinning #wheel{animation:none}
-      body::before{background:
-        repeating-linear-gradient(to right, rgba(255,255,255,.03) 0 1px, transparent 1px 40px),
-        repeating-linear-gradient(to bottom, rgba(255,255,255,.03) 0 1px, transparent 1px 40px);
-      }
-    }
+    /* Reduce motion */
+    @media (prefers-reduced-motion: reduce){ .spinning #wheel{animation:none} }
   </style>
 </head>
 <body>
 <div class="wrap">
-  <header>
-    <div class="brand"><div class="logo"></div><h1>Mood & Spin</h1></div>
-    <div class="row" style="margin-left:auto">
-      <button id="shareBtn" class="ghost">Share</button>
-      <button id="wipeBtn" class="danger">Wipe</button>
-    </div>
-  </header>
+  
 
   <main>
-    <!-- Mood & Notes panel -->
-    <section class="panel" aria-labelledby="moodhdr">
-      <div class="row between">
-        <h2 id="moodhdr">Today · <span id="today"></span></h2>
-        <div class="row">
-          <button id="summaryBtn" class="ghost" title="Show 30‑day summary">30‑day</button>
-          <button id="saveBtn" class="primary">Save</button>
+    <!-- Mood Screen -->
+    <section id="moodTab" class="screen">
+      <div class="panel" aria-labelledby="moodhdr">
+        <div class="row between">
+          <h2 id="moodhdr">Today · <span id="today"></span></h2>
+          <div class="row">
+            <button id="summaryBtn" class="ghost" title="Show 30‑day summary">30‑day</button>
+            <button id="saveBtn" class="primary">Save</button>
+          </div>
         </div>
-      </div>
 
-      <div style="height:6px"></div>
-      <div class="chip-row" id="moodRow" aria-label="Mood"></div>
+        <div style="height:6px"></div>
+        <div class="chip-row" id="moodRow" aria-label="Mood"></div>
 
-      <div style="height:6px"></div>
-      <div class="chip-row" id="energyRow" aria-label="Energy"></div>
+        <div style="height:6px"></div>
+        <div class="chip-row" id="energyRow" aria-label="Energy"></div>
 
-      <div style="height:8px"></div>
-      <label for="note" class="sr-only">Note</label>
-      <textarea id="note" placeholder="Add a quick note (optional)"></textarea>
+        <div style="height:8px"></div>
+        <label for="note" class="sr-only">Note</label>
+        <textarea id="note" placeholder="Add a quick note (optional)"></textarea>
 
-      <div class="history" id="history" aria-label="Past 7 days"></div>
+        <div class="history" id="history" aria-label="Past 7 days"></div>
 
-      <div id="summaryWrap">
-        <canvas id="summaryCanvas"></canvas>
-        <div class="row" style="justify-content:space-between;margin-top:6px;color:var(--muted);font-size:12px">
-          <span>Last 30 days · mood (dark) + energy (light)</span>
-          <span id="summaryStats"></span>
+        <div id="summaryWrap">
+          <canvas id="summaryCanvas"></canvas>
+          <div class="row" style="justify-content:space-between;margin-top:6px;color:var(--muted);font-size:12px">
+            <span>Last 30 days · mood (dark) + energy (light)</span>
+            <span id="summaryStats"></span>
+          </div>
         </div>
       </div>
     </section>
 
-    <!-- Spinner & Tasks panel -->
-    <section class="panel" aria-labelledby="spinhdr">
-      <div class="row between">
-        <h2 id="spinhdr">Random Task Spinner</h2>
-        <div class="row">
-          <input id="newTask" placeholder="Add a task…" style="background:rgba(255,255,255,.06);border:1px solid var(--glass-stroke);color:var(--fg);padding:8px 10px;border-radius:8px;min-width:140px"/>
-          <button id="addBtn" class="ghost">Add</button>
-          <button id="spinBtn" class="primary">Spin 🎲</button>
+    <!-- Tasks Screen -->
+    <section id="tasksTab" class="screen hidden">
+      <div class="panel" aria-labelledby="spinhdr">
+        <div class="row between">
+          <h2 id="spinhdr">Random Task Spinner</h2>
+          <div class="row">
+            <input id="newTask" placeholder="Add a task…" style="background:rgba(255,255,255,.06);border:1px solid var(--glass-stroke);color:var(--fg);padding:8px 10px;border-radius:10px;min-width:140px"/>
+            <button id="addBtn" class="ghost">Add</button>
+            <button id="spinBtn" class="primary">Spin 🎲</button>
+          </div>
         </div>
-      </div>
-      <div class="list" id="taskList"></div>
-      <div id="spinResult" class="result hidden">
-        <div id="wheel"></div>
-        <div id="spinText"></div>
+        <div class="list" id="taskList"></div>
+        <div id="spinResult" class="result hidden">
+          <div id="wheel"></div>
+          <div id="spinText"></div>
+        </div>
       </div>
     </section>
   </main>
 
-  <footer>
-    Offline‑ready • Add to Home Screen in Safari • v2.0
-  </footer>
+  <nav class="bottombar" role="tablist" aria-label="Primary">
+    <div class="left">
+      <button id="btabMood" class="btab active" role="tab" aria-selected="true" aria-controls="moodTab">Mood</button>
+      <button id="btabTasks" class="btab" role="tab" aria-selected="false" aria-controls="tasksTab">Tasks</button>
+    </div>
+    <div class="right">
+      <button id="shareBtn" class="bghost">Share</button>
+      <button id="wipeBtn" class="bdanger">Wipe</button>
+    </div>
+  </nav>
 </div>
 
 <script>
@@ -208,6 +210,21 @@ const todayKey = ()=> new Date().toISOString().slice(0,10);
 const LS_KEY = 'moodspin-v1';
 const load = () => { try { return JSON.parse(localStorage.getItem(LS_KEY))||{} } catch { return {} } };
 const save = s => localStorage.setItem(LS_KEY, JSON.stringify(s));
+
+// Tabs
+const tabMoodBtn = document.getElementById('btabMood');
+const tabTasksBtn = document.getElementById('btabTasks');
+const moodScreen = document.getElementById('moodTab');
+const tasksScreen = document.getElementById('tasksTab');
+function showTab(which){
+  const moodActive = which==='mood';
+  tabMoodBtn.classList.toggle('active', moodActive);
+  tabTasksBtn.classList.toggle('active', !moodActive);
+  tabMoodBtn.setAttribute('aria-selected', moodActive);
+  tabTasksBtn.setAttribute('aria-selected', !moodActive);
+  moodScreen.classList.toggle('hidden', !moodActive);
+  tasksScreen.classList.toggle('hidden', moodActive);
+}
 
 // State: { entries:{[date]:{mood:number, energy:number, note:string}}, tasks:[string], done:{[date]:{[taskIndex]:true}} }
 const EMOJI = ['😣','🙁','😐','🙂','😀']; // 1..5
@@ -343,7 +360,7 @@ function drawSummary(){
   const s=load();
   const ctx = summaryCanvas.getContext('2d');
   const dpr = window.devicePixelRatio || 1;
-  const cssW = summaryCanvas.clientWidth || 320; const cssH = summaryCanvas.clientHeight || 110;
+  const cssW = summaryCanvas.clientWidth || 320; const cssH = summaryCanvas.clientHeight || 120;
   summaryCanvas.width = Math.floor(cssW*dpr); summaryCanvas.height = Math.floor(cssH*dpr);
   ctx.setTransform(dpr,0,0,dpr,0,0);
   ctx.clearRect(0,0,cssW,cssH);
@@ -405,12 +422,16 @@ renderHeader();
 renderMoodEnergy();
 renderHistory();
 renderTasks();
+showTab('mood');
 
 document.getElementById('saveBtn').onclick = saveToday;
 document.getElementById('addBtn').onclick = addTask;
 document.getElementById('spinBtn').onclick = spinTask;
 document.getElementById('shareBtn').onclick = shareTip;
 document.getElementById('wipeBtn').onclick = wipe;
+
+tabMoodBtn.onclick = ()=> showTab('mood');
+tabTasksBtn.onclick = ()=> showTab('tasks');
 
 // Register SW for offline
 if('serviceWorker' in navigator){
